fixing styling and spacing

--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ header {
     align-items: center;
     justify-content: center;
     text-align: center;
-    min-height: 80vh;
+    min-height: 70vh;
     padding-top: 60px;
 }
 
@@ -121,6 +121,7 @@ header {
     justify-content: center;
     color: #fff;
     padding: 30px 50px;
+    background-color: #132448;
 }
 
 .table-container {
@@ -159,6 +160,10 @@ li {
     text-align: left;
 }
 
+.section-content p {
+    margin-left: 20px;
+}
+
 .divider {
     border: 1px solid #fff;
     margin: 30px 50px; 
@@ -166,8 +171,8 @@ li {
 
 /* Contact Section Styles */
 #contact {
-    background-color: #f5f5f5;
-    min-height: 20vh;
+    background-color: #fff;
+    min-height: 15vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -187,8 +192,9 @@ li {
 /* Footer Styles */
 footer {
     text-align: center;
-    padding: 10px;
+    padding: 5px;
     color: #fff;
+    font-size: 1em;
 }
 
 .fade-in-section, .fade-out-section {
@@ -200,6 +206,7 @@ footer {
 
 /* Media query for mobile devices */
 @media screen and (max-width: 600px) {
+    
     .header-content {
         flex-direction: column;
     }
@@ -209,7 +216,7 @@ footer {
     }
 
     .profile-photo {
-        width: 75%; 
+        width: 70%; 
         max-width: none; /* Reset max-width */
         margin-right: 0; /* Remove right margin */
     }
@@ -230,6 +237,7 @@ footer {
 
     .top-nav .right-menu li {
         margin: 10px 0;
+        text-align: right;
     }
 
     .top-nav .mobile-menu-icon {
@@ -237,5 +245,27 @@ footer {
         padding: 20px;
         font-size: 1.5em;
         cursor: pointer;
+    }
+
+    #status {
+        padding: 20px 40px;
+    }
+
+    #contact {
+        min-height: 10vh;
+    }
+    
+    .contact-icons {
+        margin: 20px;
+    }
+    
+    .contact-icons i {
+        font-size: 2em;
+        padding: 10px;
+        border-radius: 50%;
+    }
+
+    footer {
+        font-size: 0.75em;
     }
 }
